--- a/milestoneReport_kmk.Rmd
+++ b/milestoneReport_kmk.Rmd
@@ -26,11 +26,11 @@ gc(reset = TRUE)
 
 ## Data source and Methods
 
-The data is obtained from the following [link](https://d396qusza40orc.cloudfront.net/dsscapstone/dataset/Coursera-SwiftKey.zip) provided by Swift Key. It contains text data from various blogs, news and Twitter tweets. R programming language is used to process the data and perform exploratory data analysis.  
+The data is obtained from the following [link](https://d396qusza40orc.cloudfront.net/dsscapstone/dataset/Coursera-SwiftKey.zip) provided by Swift Key. It contains text data from various blogs, news and Twitter tweets. R programming language is used to process the data and perform exploratory data analysis.
 
-### Get space to load and process the data  
+### Get space to load and process the data
 
-First of all, all objects in the environment of R  are removed and unused memories are cleaned. Then, to save the memory and by pass the slow Internet connection, the data is pre-downloaded.  
+First of all, all objects in the environment of R are removed and unused memories are cleaned. Then, to save the memory and by pass the slow Internet connection, the data is pre-downloaded.
 
 ```{r downloadData, include=FALSE}
 fileUrl <- "https://d396qusza40orc.cloudfront.net/dsscapstone/dataset/Coursera-SwiftKey.zip"
@@ -65,21 +65,21 @@ tweets <- readLines(con)
 close(con)
 ```
 
-### Required R packages  
+### Required R packages
 
-The following R packages are loaded:  
+The following R packages are loaded:
 
-1. dplyr  
+1.  dplyr
 
-2. tidyr  
+2.  tidyr
 
-3. ggplot2  
+3.  ggplot2
 
-4. tm  
+4.  tm
 
-5. tidytext  
+5.  tidytext
 
-6. knitr
+6.  knitr
 
 ```{r library, include=FALSE}
 library(dplyr)
@@ -90,9 +90,10 @@ library(knitr)
 library(tidytext)
 ```
 
-## Summary of the training dataset  
+## Summary of the training dataset
 
 File size, number of lines, number of characters and number of words are counted as shown in **Table 1**.
+
 ```{r summarySetup, include=FALSE}
 ## File size 
 Size <- c(blogs = format(object.size(blogs), units = "Mb"),
@@ -124,13 +125,13 @@ Words <- c(blogs = wordCount(blogs),
 desdf <- data.frame(File = names(Lines),Lines, Characters,Words,Size)
 ```
 
-#### Table1. Summary of the training data  
+#### Table1. Summary of the training data
 
 ```{r summarytab}
 desdf %>% kable(row.names = F, align = c("l","r","r","r","r"))
 ```
 
-Distribution of number of words per line are described using histograms **(Figure 1)**.  
+Distribution of number of words per line are described using histograms **(Figure 1)**.
 
 ```{r histWPLSetup, include=FALSE}
 wordPerLine <- function(x) {
@@ -172,7 +173,7 @@ allHist <- ggplot(data = data.frame(wpl=c(blogs_wpl,news_wpl,tweets_wpl)),
 cowplot::plot_grid(blogHist, newsHist, tweetsHist, allHist)
 ```
 
-**Figure1. Histograms showing distribution of words per line**  
+**Figure1. Histograms showing distribution of words per line**
 
 ```{r summaryWPLSetup, include=FALSE}
 max <- max(length(blogs_wpl),length(news_wpl), length(tweets_wpl))
@@ -218,7 +219,7 @@ dataSample <- c(blogsSample, newsSample, tweetsSample)
 txt <- dataSample
 ```
 
-To cover the memory of my computer, 1000 lines from each dataset are sampled as the training data. Then, the data is cleaned by converting to lower case and removing numbers, punctuations, stop-words and extra spaces.   
+To cover the memory of my computer, 1000 lines from each dataset are sampled as the training data. Then, the data is cleaned by converting to lower case and removing numbers, punctuations, stop-words and extra spaces.
 
 ```{r cleanText, include=FALSE}
 txt <- VectorSource(txt) ##--create vector source for Corpora
@@ -230,7 +231,7 @@ txt <- tm_map(txt, removeWords, stopwords("english")) #- remove stop-word
 txt <- tm_map(txt, stripWhitespace) #- remove white space
 ```
 
-Then, the cleaned text is converted into a table of words and their respective frequency. 
+Then, the cleaned text is converted into a table of words and their respective frequency.
 
 ```{r matrix, include=FALSE}
 doc.matrix <- TermDocumentMatrix(txt) #- term document matrix created
@@ -254,7 +255,7 @@ df %>%
   theme_bw()
 ```
 
-**Figure2. Words with most occurrence in the training data**  
+**Figure2. Words with most occurrence in the training data**
 
 ```{r ngram, include=FALSE}
 bigram <- data.frame(txt = as.character(txt)) %>% 
@@ -276,7 +277,7 @@ bigram %>%
     theme(axis.text.x = element_text(angle = 90))
 ```
 
-**Figure3. Top 20 bi-grams (two words occurring together)**  
+**Figure3. Top 20 bi-grams (two words occurring together)**
 
 ```{r trigram, include=TRUE}
 trigram %>% 
@@ -289,125 +290,180 @@ trigram %>%
     theme(axis.text.x = element_text(angle = 90))
 ```
 
-**Figure4. Top 20 tri-grams (three words occurring together)**  
+**Figure4. Top 20 tri-grams (three words occurring together)**
 
 ## Conclusion
 
-A text prediction model will be built by using the frequency of occurrence of bi-grams and tri-grams.  
-
+A text prediction model will be built by using the frequency of occurrence of bi-grams and tri-grams.
 
 ## Appendix: Codes used for this report
 
-```{r ref.label=knitr::all_labels(), echo=TRUE, eval=FALSE} 
+### Get more memory
 
-### get more memory---- 
+```         
 rm(list = ls()) #-- remove object in environment gc(full = TRUE) #-- clean memory gc(reset = TRUE)
+```
 
-### download data if necessary----
+### Download data if necessary
 
-fileUrl \<- "<https://d396qusza40orc.cloudfront.net/dsscapstone/dataset/Coursera-SwiftKey.zip>"
+```         
+fileUrl <- "https://d396qusza40orc.cloudfront.net/dsscapstone/dataset/Coursera-SwiftKey.zip"
 
 if(!file.exists("data")) { dir.create("data") }
 
 if(!file.exists("data/final/en_US")) { tempFile \<- tempfile() download.file(fileUrl, tempFile) unzip(tempFile, exdir = "data") }
+```
 
-### read data----
+### Read data
 
-### read the blogs data----
+```         
 
-con \<- file("data/final/en_US/en_US.blogs.txt", open = "r") blogs \<- readLines(con) close(con)
+con <- file("data/final/en_US/en_US.blogs.txt", open = "r") 
+blogs <- readLines(con) 
+close(con)
 
-### read the news data----
 
-con \<- file("data/final/en_US/en_US.news.txt", open = "r") news \<- readLines(con) close(con)
+con <- file("data/final/en_US/en_US.news.txt", open = "r") 
+news <- readLines(con) 
+close(con)
 
-### read the tweets data----
 
-con \<- file("data/final/en_US/en_US.twitter.txt", open = "r") tweets \<- readLines(con) close(con)
+con <- file("data/final/en_US/en_US.twitter.txt", open = "r") 
+tweets <- readLines(con) 
+close(con)
+```
 
-### Libraries----
+### Libraries
 
-library(dplyr) library(tidyr) library(ggplot2) library(tm) library(knitr) library(tidytext)
+```
+library(dplyr) 
+library(tidyr) 
+library(ggplot2) 
+library(tm) 
+library(knitr) 
+library(tidytext)
+```
 
-### Summarize data----
+### Summarize data
 
-### File size----
+#### File size
+```
+Size <- c(blogs = format(object.size(blogs), units = "Mb"), news = format(object.size(news), units = "Mb"), tweets = format(object.size(tweets), units = "Mb")) 
+gc()
+```
+#### Number of lines
 
-Size \<- c(blogs = format(object.size(blogs), units = "Mb"), news = format(object.size(news), units = "Mb"), tweets = format(object.size(tweets), units = "Mb")) gc()
+``` 
+Lines <- c(blogs = length(blogs), news = length(news), tweets = length(tweets)) 
+gc()
+```
+### Number of characters
+```
+Characters <- c(blogs = sum(sapply(blogs, nchar)), news = sum(sapply(news, nchar)), tweets = sum(sapply(blogs, nchar))) 
+gc()
+```  
 
-### Number of lines----
+### Numbers of words
 
-Lines \<- c(blogs = length(blogs), news = length(news), tweets = length(tweets)) gc()
+```
+wordCount <- function(x) {
+  length(unlist(strsplit(x, split = " ")))
+} 
+Words <- c(blogs = wordCount(blogs), news = wordCount(news), tweets = wordCount(tweets))
 
-### Number of characters------
+desdf <- data.frame(Lines, Characters,Words,Size)
+```  
 
-Characters \<- c(blogs = sum(sapply(blogs, nchar)), news = sum(sapply(news, nchar)), tweets = sum(sapply(blogs, nchar))) gc()
+### Summary table
+```
+desdf %>% kable(align = c("r","r","r","r"))
+```  
 
-### Numbers of words----
+### Word per line
+```
+wordPerLine <- function(x) { sapply(strsplit(x, split = " "), length) }
 
-wordCount \<- function(x) { length(unlist(strsplit(x, split = " "))) } Words \<- c(blogs = wordCount(blogs), news = wordCount(news), tweets = wordCount(tweets))
+blogs_wpl <- wordPerLine(blogs) 
+news_wpl <- wordPerLine(news) 
+tweets_wpl <- wordPerLine(tweets)
 
-desdf \<- data.frame(Lines, Characters,Words,Size)
+blogHist <- ggplot(data = data.frame(wpl=blogs_wpl), aes(wpl))+ geom_histogram(fill = "navy", binwidth = 1)+ labs(x = "Number of Words per line", title = "File: blogs")+ theme_bw()
 
-### Summary table----
+newsHist <- ggplot(data = data.frame(wpl=news_wpl), aes(wpl))+ geom_histogram(fill="orange", binwidth = 1)+ labs(x = "Number of Words per line", title = "File: news")+ theme_bw()
 
-desdf %\>% kable(align = c("r","r","r","r"))
+tweetsHist <- ggplot(data = data.frame(wpl=tweets_wpl), aes(wpl))+ geom_histogram(fill="skyblue", binwidth = 1)+ labs(x = "Number of Words per line", title = "File: tweets")+ theme_bw()
 
-### Word per line----
+allHist <- ggplot(data = data.frame(wpl=c(blogs_wpl,news_wpl,tweets_wpl)), aes(wpl))+ geom_histogram(fill="skyblue", binwidth = 1)+ labs(x = "Number of Words per line", title = "File: all")+ theme_bw()
+```  
 
-wordPerLine \<- function(x) { sapply(strsplit(x, split = " "), length) }
-
-blogs_wpl \<- wordPerLine(blogs) news_wpl \<- wordPerLine(news) tweets_wpl \<- wordPerLine(tweets)
-
-blogHist \<- ggplot(data = data.frame(wpl=blogs_wpl), aes(wpl))+ geom_histogram(fill = "navy", binwidth = 1)+ labs(x = "Number of Words per line", title = "File: blogs")+ theme_bw()
-
-newsHist \<- ggplot(data = data.frame(wpl=news_wpl), aes(wpl))+ geom_histogram(fill="orange", binwidth = 1)+ labs(x = "Number of Words per line", title = "File: news")+ theme_bw()
-
-tweetsHist \<- ggplot(data = data.frame(wpl=tweets_wpl), aes(wpl))+ geom_histogram(fill="skyblue", binwidth = 1)+ labs(x = "Number of Words per line", title = "File: tweets")+ theme_bw()
-
-allHist \<- ggplot(data = data.frame(wpl=c(blogs_wpl,news_wpl,tweets_wpl)), aes(wpl))+ geom_histogram(fill="skyblue", binwidth = 1)+ labs(x = "Number of Words per line", title = "File: all")+ theme_bw()
-
-### plots in one grid------
-
+### Plots in one grid
+```
 cowplot::plot_grid(blogHist, newsHist, tweetsHist, allHist)
+```  
 
-### word per line table setup------
+### Word per line table setup
 
-max \<- max(length(blogs_wpl),length(news_wpl), length(tweets_wpl)) length(blogs_wpl) \<- max length(news_wpl) \<- max length(tweets_wpl) \<- max
+``` 
+max <- max(length(blogs_wpl),length(news_wpl), length(tweets_wpl)) 
+length(blogs_wpl) <- max 
+length(news_wpl) <- max 
+length(tweets_wpl) <- max
 
-words_per_line \<- data.frame(blogs = blogs_wpl, news = news_wpl, tweets = tweets_wpl) rm("max") gc()
+words_per_line <- data.frame(blogs = blogs_wpl, news = news_wpl, tweets = tweets_wpl) rm("max") 
+gc()
+```  
 
-### word per line table----
+### Word per line table----
+```
+words_per_line %>% summarise(across(everything(), list(Mean = mean, SD = sd, Median = median, IQR = IQR, Max = max, Min = min), na.rm = T)) %>% mutate(across(c(ends_with("Mean"), ends_with("SD")), round)) %>% pivot_longer( cols = everything(), names_to = c("File", "statistic"), names_sep = "_", values_to = "value") %>% pivot_wider(names_from = statistic, values_from = value)
+```  
 
-words_per_line %\>% summarise(across(everything(), list(Mean = mean, SD = sd, Median = median, IQR = IQR, Max = max, Min = min), na.rm = T)) %\>% mutate(across(c(ends_with("Mean"), ends_with("SD")), round)) %\>% pivot_longer( cols = everything(), names_to = c("File", "statistic"), names_sep = "\_", values_to = "value") %\>% pivot_wider(names_from = statistic, values_from = value)
+### Exploratory analysis
 
-### Exploratory analysis------
+#### Sample data
+```
+set.seed(1000) 
+blogsSample \<- sample(blogs, size = 1000) 
+newsSample \<- sample(news, size = 1000) 
+tweetsSample \<- sample(tweets, size = 1000) 
+dataSample \<- c(blogsSample, newsSample, tweetsSample) txt \<- dataSample
+```  
 
-### sample data-----
+#### Clean data
+```
+txt \<- VectorSource(txt) ##--create vector source for Copora 
+txt \<- Corpus(txt) ##-- create Copora 
+txt \<- tm_map(txt, content_transformer(tolower)) #- to lower case 
+txt \<- tm_map(txt, removeNumbers) #- remove the numbers in text 
+txt \<- tm_map(txt, removePunctuation) #- remove the punctuation 
+txt \<- tm_map(txt, removeWords, stopwords("english")) #- remove stopword 
+txt \<- tm_map(txt, stripWhitespace) #- remove white space
+```  
 
-set.seed(1000) blogsSample \<- sample(blogs, size = 1000) newsSample \<- sample(news, size = 1000) tweetsSample \<- sample(tweets, size = 1000) dataSample \<- c(blogsSample, newsSample, tweetsSample) txt \<- dataSample
-
-### clean data--------
-
-txt \<- VectorSource(txt) ##--create vector source for Copora txt \<- Corpus(txt) ##-- create Copora txt \<- tm_map(txt, content_transformer(tolower)) #- to lower case txt \<- tm_map(txt, removeNumbers) #- remove the numbers in text txt \<- tm_map(txt, removePunctuation) #- remove the punctuation txt \<- tm_map(txt, removeWords, stopwords("english")) #- remove stopword txt \<- tm_map(txt, stripWhitespace) #- remove white space
-
-### document term matrix------
-
-doc.matrix \<- TermDocumentMatrix(txt) #- term document matrix created m \<- as.matrix(doc.matrix) #- convert to matirx v \<- sort(rowSums(m),decreasing = T); v #- convert to vector of word and their frequency df \<- data.frame(word = names(v), freq = v)
-
-### word occurrence---------
+#### Document term matrix
+```
+doc.matrix \<- TermDocumentMatrix(txt) #- term document matrix created 
+m \<- as.matrix(doc.matrix) #- convert to matirx 
+v \<- sort(rowSums(m),decreasing = T) #- convert to vector of word and their frequency 
+df \<- data.frame(word = names(v), freq = v)
+``` 
+#### word occurrence
+```
 
 df %\>% arrange(desc(freq)) %\>% slice_head(n = 10) %\>% ggplot(aes(reorder(word,-freq), freq))+ geom_col(fill = "purple4")+ labs(x ="Words", y = "Frequency", title = "Top 10 most frequent words in sample text")+ theme_bw()
+```  
 
-### N-grams--------
-
-bigram \<- data.frame(txt = as.character(txt)) %\>% unnest_tokens(output = bigram, input = txt, token = "ngrams", n=2) trigram \<- data.frame(txt = as.character(txt)) %\>% unnest_tokens(output = trigram, input = txt, token = "ngrams", n=3)
-
-### Bigram--------
-
-bigram %\>% count(bigram, sort = T) %\>% slice_head(n = 20) %\>% ggplot(aes(reorder(bigram,-n),n))+ geom_col(fill = "steelblue")+ labs(x = "Bigrams", y = "Frequency")+ theme_minimal()+ theme(axis.text.x = element_text(angle = 90))
-
-### Trigram--------
-
-trigram %\>% count(trigram, sort = T) %\>% slice_head(n = 20) %\>% ggplot(aes(reorder(trigram,-n),n))+ geom_col(fill = "forestgreen")+ labs(x = "Trigrams", y = "Frequency")+ theme_minimal()+ theme(axis.text.x = element_text(angle = 90))
+### N-grams
 ```
+bigram \<- data.frame(txt = as.character(txt)) %\>% unnest_tokens(output = bigram, input = txt, token = "ngrams", n=2) trigram \<- data.frame(txt = as.character(txt)) %\>% unnest_tokens(output = trigram, input = txt, token = "ngrams", n=3)
+```  
+
+#### Bigram  
+```
+bigram %\>% count(bigram, sort = T) %\>% slice_head(n = 20) %\>% ggplot(aes(reorder(bigram,-n),n))+ geom_col(fill = "steelblue")+ labs(x = "Bigrams", y = "Frequency")+ theme_minimal()+ theme(axis.text.x = element_text(angle = 90))
+```  
+
+#### Trigram
+```
+trigram %\>% count(trigram, sort = T) %\>% slice_head(n = 20) %\>% ggplot(aes(reorder(trigram,-n),n))+ geom_col(fill = "forestgreen")+ labs(x = "Trigrams", y = "Frequency")+ theme_minimal()+ theme(axis.text.x = element_text(angle = 90)) \`\`\`
+```  
