--- a/pitch.Rmd
+++ b/pitch.Rmd
@@ -4,7 +4,7 @@ author: "Kaung Myat Khant"
 date: "`r Sys.Date()`"
 output: 
   slidy_presentation:
-      keep_md = TRUE
+      keep_md: TRUE
 ---
 
 ```{r setup, include=FALSE}
